--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@ h2{font-size:28px;margin:8px 0 12px;text-align:center}
 .sysTiles{display:grid;grid-template-columns:repeat(3,1fr);gap:24px}
 .sysTile{border:2px solid var(--brand-20);border-radius:14px;padding:12px;cursor:pointer;text-align:center;background:#fff}
 .sysTile.active{border-color:var(--brand);box-shadow:0 0 0 3px var(--brand-20)}
+.condensateVisual{position:relative;border:1px solid var(--line);border-radius:12px;overflow:hidden;background:#fff}
+.condensateVisual img{display:block;width:100%;height:auto}
+.condensateHotspot{position:absolute;transform:translate(-50%,-50%);background:rgba(10,103,255,.92);color:#fff;border:0;
+  border-radius:999px;padding:6px 14px;font-weight:700;font-size:14px;cursor:pointer;box-shadow:var(--shadow);transition:transform .12s,box-shadow .12s}
+.condensateHotspot:hover{transform:translate(-50%,-50%) scale(1.04)}
+.condensateHotspot.active{background:#0b3a76}
+.condensateVisual .note{position:absolute;left:16px;bottom:16px;background:rgba(255,255,255,.92);padding:8px 12px;border-radius:10px;
+  color:var(--muted);font-size:12px;max-width:70%}
 @media(max-width:900px){.tiles{grid-template-columns:1fr}.item{grid-template-columns:36px 1fr}.sysTiles{grid-template-columns:1fr}}
 </style>
 </head>
@@ -306,6 +314,26 @@ function renderGas(){
   );
 }
 function renderCondensate(){
+  const diagram=document.createElement('div'); diagram.className='card';
+  diagram.innerHTML=`<h3 style="margin:0 0 12px">Condensate visual</h3>
+    <div class="condensateVisual">
+      <img src="assets/condensate-diagram.svg" alt="Condensate routing diagram with gully, hopper, soil stack and soakaway">
+      <button class="condensateHotspot" style="top:78%;left:32%" data-route="externalSoakaway" data-label="Gully">Gully</button>
+      <button class="condensateHotspot" style="top:35%;left:64%" data-route="externalSoakaway" data-label="Hopper">Hopper</button>
+      <button class="condensateHotspot" style="top:56%;left:70%" data-route="internalWaste" data-label="Soil">Soil</button>
+      <button class="condensateHotspot" style="top:82%;left:84%" data-route="externalSoakaway" data-label="Soakaway">Soakaway</button>
+      <div class="note">Tap a hotspot to pre-select the matching condensate route.</div>
+    </div>`;
+  sysContent.appendChild(diagram);
+  diagram.querySelectorAll('.condensateHotspot').forEach(btn=>{
+    const route=btn.dataset.route;
+    if(state.system.condensate.route===route){btn.classList.add('active');}
+    btn.addEventListener('click',()=>{
+      state.system.condensate.route=route;
+      save();
+      renderSystemStep();
+    });
+  });
   mkChoiceCard('Condensate route',
     [
       {key:'internalWaste',label:'Internal waste'},
