--- a/flue.html
+++ b/flue.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Flue Route Builder</title>
+  <title>Flue Route Builder (Top Exit)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
@@ -58,6 +58,14 @@
       align-items: center;
       gap: 14px;
     }
+    .badge {
+      background: #eff6ff;
+      color: #0f3c79;
+      padding: 3px 6px;
+      border-radius: 999px;
+      font-size: 11px;
+      margin-right: 6px;
+    }
     .canvas-wrap {
       flex: 1;
       background: #edf0f6;
@@ -81,19 +89,29 @@
       min-height: 90px;
       border: 1px solid var(--border);
       border-radius: 6px;
-      font-family: ui-monospace, SFMono-Regular, SFMono-Regular, SFMono-Regular, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
       font-size: 11px;
       box-sizing: border-box;
       padding: 4px 6px;
       background: #f9fafb;
     }
-    .badge {
-      background: #eff6ff;
-      color: #0f3c79;
-      padding: 3px 6px;
-      border-radius: 999px;
-      font-size: 11px;
-      margin-right: 6px;
+    .vector-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 30px);
+      grid-gap: 4px;
+    }
+    .vector-grid button {
+      background: #fff;
+      border: 1px solid #dbe1ea;
+      border-radius: 6px;
+      font-size: 14px;
+      cursor: pointer;
+      width: 30px;
+      height: 30px;
+      line-height: 1;
+    }
+    .vector-grid button:hover {
+      border-color: #0ea5e9;
     }
   </style>
 </head>
@@ -119,35 +137,49 @@
         <span class="badge" id="bends">Bends: 0</span>
         <span class="badge" id="status">OK</span>
       </div>
-      <div style="font-size:12px;color:#64748b">Start = boiler outlet, pointing right →</div>
+      <div style="display:flex; gap:10px; align-items:center;">
+        <div style="font-size:12px;color:#64748b">Vector</div>
+        <div class="vector-grid">
+          <button data-dir="315">↖️</button>
+          <button data-dir="270">⬆️</button>
+          <button data-dir="225">↗️</button>
+          <button data-dir="0">⬅️</button>
+          <button data-rotate="cw">🔄</button>
+          <button data-dir="180">➡️</button>
+          <button data-dir="45">↙️</button>
+          <button data-dir="90">⬇️</button>
+          <button data-dir="135">↘️</button>
+        </div>
+      </div>
     </div>
     <div class="canvas-wrap">
       <svg id="flue-svg" width="640" height="460" viewBox="0 0 640 460">
-        <!-- backdrop: wall at x=520 -->
+        <!-- wall -->
         <line x1="520" y1="0" x2="520" y2="460" stroke="#e11d48" stroke-dasharray="4 4" stroke-width="1.5"></line>
-        <!-- boiler block -->
-        <rect x="60" y="180" width="60" height="80" rx="6" fill="#fff" stroke="#94a3b8"></rect>
-        <text x="90" y="195" text-anchor="middle" font-size="10" fill="#0f172a">Boiler</text>
-        <circle id="boiler-out" cx="120" cy="220" r="4" fill="#0ea5e9"></circle>
+        <!-- boiler -->
+        <rect x="80" y="210" width="60" height="90" rx="6" fill="#fff" stroke="#94a3b8"></rect>
+        <text x="110" y="225" text-anchor="middle" font-size="10" fill="#0f172a">Boiler</text>
+        <!-- top outlet -->
+        <circle id="boiler-out" cx="110" cy="210" r="4" fill="#0ea5e9"></circle>
       </svg>
     </div>
     <div class="panel">
-      <label for="json-out" style="display:block;margin-bottom:4px;">Route JSON (use this in Notes-Elite export):</label>
+      <label for="json-out" style="display:block;margin-bottom:4px;">Route JSON:</label>
       <textarea id="json-out" readonly></textarea>
     </div>
   </div>
 
   <script>
-    // CONFIG — you can change these to match Worcester eq lengths
+    // CONFIG
     const EQ = {
-      straightPerMm: 1 / 1000,   // 1m straight = 1m eq
-      bend45: 0.5,               // example values — change to manufacturer table
+      straightPerMm: 1 / 1000,
+      bend45: 0.5,       // put proper Worcester/Vaillant values here later
       bend90: 1.0,
       plumeKit: 1.5,
       verticalRisePerMm: 1 / 1000,
       roofTerminal: 1.0
     };
-    const MAX_EQ = 10; // m — change per boiler/flue
+    const MAX_EQ = 10;
 
     const svg = document.getElementById('flue-svg');
     const eqSpan = document.getElementById('eq-length');
@@ -155,14 +187,14 @@
     const statusSpan = document.getElementById('status');
     const jsonOut = document.getElementById('json-out');
 
-    // drawing state
+    // Start at TOP of boiler, pointing UP
     let parts = [];
-    let cursor = { x: 120, y: 220, angle: 0 }; // start at boiler, rightwards (0°)
+    let cursor = { x: 110, y: 210, angle: -90 }; // -90 = up
 
     function degToRad(d) { return d * Math.PI / 180; }
 
     function addStraight(mm) {
-      const scale = 0.1; // 1mm -> 0.1px so 1000mm = 100px
+      const scale = 0.1;
       const rad = degToRad(cursor.angle);
       const x2 = cursor.x + Math.cos(rad) * (mm * scale);
       const y2 = cursor.y + Math.sin(rad) * (mm * scale);
@@ -176,7 +208,6 @@
       });
       cursor.x = x2;
       cursor.y = y2;
-      // no angle change
     }
 
     function addElbow(deltaAngle) {
@@ -198,7 +229,6 @@
     }
 
     function addPlumeKit() {
-      // simple: vertical up 400mm then outlet to right
       const scale = 0.1;
       const upMm = 400;
       const x1 = cursor.x;
@@ -214,6 +244,7 @@
       });
       cursor.x = x1;
       cursor.y = y2;
+      cursor.angle = 0; // blow out to right
     }
 
     function addVerticalRise(mm = 1000) {
@@ -231,7 +262,7 @@
       });
       cursor.x = x1;
       cursor.y = y2;
-      cursor.angle = -90; // pointing up
+      cursor.angle = -90;
     }
 
     function addRoofTerminal(kind) {
@@ -244,33 +275,38 @@
     }
 
     function rebuildSVG() {
-      // remove previous dynamic elements
       [...svg.querySelectorAll('.route-part')].forEach(el => el.remove());
 
-      parts.forEach((p, idx) => {
+      parts.forEach(p => {
         if (p.type === 'straight' || p.type === 'vertical-rise') {
+          // draw thick tube
           const line = document.createElementNS('http://www.w3.org/2000/svg', 'line');
           line.setAttribute('x1', p.x1);
           line.setAttribute('y1', p.y1);
           line.setAttribute('x2', p.x2);
           line.setAttribute('y2', p.y2);
           line.setAttribute('stroke', '#0f172a');
-          line.setAttribute('stroke-width', '4');
+          line.setAttribute('stroke-width', '7');
+          line.setAttribute('stroke-linecap', 'round');
           line.setAttribute('class', 'route-part');
           svg.appendChild(line);
         } else if (p.type === 'elbow') {
-          const c = document.createElementNS('http://www.w3.org/2000/svg', 'circle');
-          c.setAttribute('cx', p.x);
-          c.setAttribute('cy', p.y);
-          c.setAttribute('r', 5);
-          c.setAttribute('fill', '#fb7185');
-          c.setAttribute('class', 'route-part');
-          svg.appendChild(c);
+          // draw a small square/plate to show elbow
+          const s = 12;
+          const rect = document.createElementNS('http://www.w3.org/2000/svg', 'rect');
+          rect.setAttribute('x', p.x - s/2);
+          rect.setAttribute('y', p.y - s/2);
+          rect.setAttribute('width', s);
+          rect.setAttribute('height', s);
+          rect.setAttribute('fill', '#fb7185');
+          rect.setAttribute('rx', 3);
+          rect.setAttribute('class', 'route-part');
+          svg.appendChild(rect);
         } else if (p.type === 'terminal-horizontal') {
           const rect = document.createElementNS('http://www.w3.org/2000/svg', 'rect');
           rect.setAttribute('x', p.x);
           rect.setAttribute('y', p.y - 6);
-          rect.setAttribute('width', 16);
+          rect.setAttribute('width', 18);
           rect.setAttribute('height', 12);
           rect.setAttribute('fill', '#22c55e');
           rect.setAttribute('rx', 2);
@@ -283,7 +319,8 @@
           line.setAttribute('x2', p.x2);
           line.setAttribute('y2', p.y2);
           line.setAttribute('stroke', '#6366f1');
-          line.setAttribute('stroke-width', '3.5');
+          line.setAttribute('stroke-width', '6');
+          line.setAttribute('stroke-linecap', 'round');
           line.setAttribute('class', 'route-part');
           svg.appendChild(line);
 
@@ -301,7 +338,6 @@
             const d = `${p.x},${p.y} ${p.x+16},${p.y} ${p.x+8},${p.y-10}`;
             poly.setAttribute('points', d);
           } else {
-            // flat
             const d = `${p.x},${p.y} ${p.x+16},${p.y} ${p.x+16},${p.y-6} ${p.x},${p.y-6}`;
             poly.setAttribute('points', d);
           }
@@ -340,45 +376,49 @@
       } else {
         statusSpan.textContent = `OK`;
         statusSpan.style.background = '#eff6ff';
-        statusSpan.style.color = '#0f172a';
+        statusSpan.style.color = '#0f3c79';
       }
 
       jsonOut.value = JSON.stringify({
-        start: { x: 120, y: 220 },
+        start: { x: 110, y: 210, exit: "top" },
         parts: parts
       }, null, 2);
     }
 
-    // event binding
+    // part buttons
     document.querySelectorAll('.btn[data-action]').forEach(btn => {
       btn.addEventListener('click', () => {
         const act = btn.dataset.action;
-        if (act === 'straight') {
-          addStraight(Number(btn.dataset.length));
-        } else if (act === 'elbow') {
-          addElbow(Number(btn.dataset.angle));
-        } else if (act === 'terminal-horiz') {
-          addHorizontalTerminal();
-        } else if (act === 'plume-kit') {
-          addPlumeKit();
-        } else if (act === 'vertical-rise') {
-          addVerticalRise(1000);
-        } else if (act === 'roof-pitched') {
-          addRoofTerminal('pitched');
-        } else if (act === 'roof-flat') {
-          addRoofTerminal('flat');
-        }
+        if (act === 'straight') addStraight(Number(btn.dataset.length));
+        else if (act === 'elbow') addElbow(Number(btn.dataset.angle));
+        else if (act === 'terminal-horiz') addHorizontalTerminal();
+        else if (act === 'plume-kit') addPlumeKit();
+        else if (act === 'vertical-rise') addVerticalRise(1000);
+        else if (act === 'roof-pitched') addRoofTerminal('pitched');
+        else if (act === 'roof-flat') addRoofTerminal('flat');
         rebuildSVG();
+      });
+    });
+
+    // vector controls
+    document.querySelectorAll('.vector-grid button').forEach(btn => {
+      btn.addEventListener('click', () => {
+        const dir = btn.dataset.dir;
+        const rot = btn.dataset.rotate;
+        if (dir !== undefined) {
+          cursor.angle = Number(dir); // set absolute heading
+        } else if (rot === 'cw') {
+          cursor.angle = (cursor.angle + 90) % 360;
+        }
       });
     });
 
     document.getElementById('reset').addEventListener('click', () => {
       parts = [];
-      cursor = { x: 120, y: 220, angle: 0 };
+      cursor = { x: 110, y: 210, angle: -90 };
       rebuildSVG();
     });
 
-    // initial
     rebuildSVG();
   </script>
 </body>
