--- a/flue.html
+++ b/flue.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Flue Route Builder (Top Exit)</title>
+  <title>Flue Route Builder (guided)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
@@ -117,16 +117,18 @@
 </head>
 <body>
   <div class="sidebar">
-    <h2>Flue Parts</h2>
+    <h2>Manual parts</h2>
     <button class="btn" data-action="straight" data-length="1000">➕ Straight 1m</button>
     <button class="btn" data-action="straight" data-length="500">➕ Straight 0.5m</button>
     <button class="btn" data-action="elbow" data-angle="45">↪ 45° bend</button>
     <button class="btn" data-action="elbow" data-angle="90">↪ 90° bend</button>
-    <button class="btn" data-action="terminal-horiz">⏹ Horizontal terminal</button>
-    <button class="btn" data-action="plume-kit">🌀 Plume kit</button>
-    <button class="btn" data-action="vertical-rise">⬆ Vertical rise (to roof)</button>
-    <button class="btn" data-action="roof-pitched">🏠 Roof terminal – pitched</button>
-    <button class="btn" data-action="roof-flat">🧱 Roof terminal – flat</button>
+    <hr />
+    <h2>Penetrations</h2>
+    <button class="btn" data-action="penetrate-wall">🧱 Penetrate wall</button>
+    <button class="btn" data-action="penetrate-roof-pitched">🏠 Penetrate roof (pitched)</button>
+    <button class="btn" data-action="penetrate-roof-flat">🧱 Penetrate roof (flat)</button>
+    <button class="btn" data-action="terminate">⏹ Terminate here</button>
+    <button class="btn" data-action="plume-kit">🌀 Plume kit (after penetration)</button>
     <hr />
     <button class="btn" id="reset">🗑 Clear route</button>
   </div>
@@ -138,7 +140,7 @@
         <span class="badge" id="status">OK</span>
       </div>
       <div style="display:flex; gap:10px; align-items:center;">
-        <div style="font-size:12px;color:#64748b">Vector</div>
+        <div style="font-size:12px;color:#64748b">Tap to auto-add elbow/length</div>
         <div class="vector-grid">
           <button data-dir="315">↖️</button>
           <button data-dir="270">⬆️</button>
@@ -154,7 +156,7 @@
     </div>
     <div class="canvas-wrap">
       <svg id="flue-svg" width="640" height="460" viewBox="0 0 640 460">
-        <!-- wall -->
+        <!-- wall line -->
         <line x1="520" y1="0" x2="520" y2="460" stroke="#e11d48" stroke-dasharray="4 4" stroke-width="1.5"></line>
         <!-- boiler -->
         <rect x="80" y="210" width="60" height="90" rx="6" fill="#fff" stroke="#94a3b8"></rect>
@@ -164,20 +166,19 @@
       </svg>
     </div>
     <div class="panel">
-      <label for="json-out" style="display:block;margin-bottom:4px;">Route JSON:</label>
+      <label for="json-out" style="display:block;margin-bottom:4px;">Route JSON (for Notes-Elite):</label>
       <textarea id="json-out" readonly></textarea>
     </div>
   </div>
 
   <script>
-    // CONFIG
+    // Basic equivalent length config — we can brand-split later
     const EQ = {
       straightPerMm: 1 / 1000,
-      bend45: 0.5,       // put proper Worcester/Vaillant values here later
+      bend45: 0.5,
       bend90: 1.0,
       plumeKit: 1.5,
-      verticalRisePerMm: 1 / 1000,
-      roofTerminal: 1.0
+      penetration: 0.5
     };
     const MAX_EQ = 10;
 
@@ -187,9 +188,10 @@
     const statusSpan = document.getElementById('status');
     const jsonOut = document.getElementById('json-out');
 
-    // Start at TOP of boiler, pointing UP
+    // state
     let parts = [];
-    let cursor = { x: 110, y: 210, angle: -90 }; // -90 = up
+    let cursor = { x: 110, y: 210, angle: -90 }; // top exit, pointing up
+    let lastWasPenetration = false; // for plume rule
 
     function degToRad(d) { return d * Math.PI / 180; }
 
@@ -208,78 +210,64 @@
       });
       cursor.x = x2;
       cursor.y = y2;
+      lastWasPenetration = false;
     }
 
-    function addElbow(deltaAngle) {
+    function addElbowTo(angleTarget) {
+      // angleTarget is absolute
+      const current = cursor.angle;
+      let delta = angleTarget - current;
+      // normalise to -180..180
+      delta = ((delta + 180) % 360) - 180;
       parts.push({
         type: 'elbow',
-        angle: deltaAngle,
+        angle: delta,
         x: cursor.x,
         y: cursor.y
       });
-      cursor.angle = (cursor.angle + deltaAngle) % 360;
+      cursor.angle = angleTarget;
+      lastWasPenetration = false;
     }
 
     function addHorizontalTerminal() {
       parts.push({
-        type: 'terminal-horizontal',
+        type: 'terminal',
         x: cursor.x,
         y: cursor.y
       });
+      lastWasPenetration = false;
     }
 
-    function addPlumeKit() {
-      const scale = 0.1;
-      const upMm = 400;
-      const x1 = cursor.x;
-      const y1 = cursor.y;
-      const y2 = y1 - (upMm * scale);
+    function addPenetration(kind) {
       parts.push({
-        type: 'plume-kit',
-        x1,
-        y1,
-        x2: x1,
-        y2,
-        headDir: 0
-      });
-      cursor.x = x1;
-      cursor.y = y2;
-      cursor.angle = 0; // blow out to right
-    }
-
-    function addVerticalRise(mm = 1000) {
-      const scale = 0.1;
-      const x1 = cursor.x;
-      const y1 = cursor.y;
-      const y2 = y1 - (mm * scale);
-      parts.push({
-        type: 'vertical-rise',
-        mm,
-        x1,
-        y1,
-        x2: x1,
-        y2
-      });
-      cursor.x = x1;
-      cursor.y = y2;
-      cursor.angle = -90;
-    }
-
-    function addRoofTerminal(kind) {
-      parts.push({
-        type: 'roof-terminal',
+        type: 'penetration',
         variant: kind,
         x: cursor.x,
         y: cursor.y
       });
+      lastWasPenetration = true;
+    }
+
+    function addPlumeKit() {
+      if (!lastWasPenetration) {
+        alert("Plume kit can only be added immediately after a penetration.");
+        return;
+      }
+      // simple plume head
+      const head = {
+        type: 'plume-kit',
+        x: cursor.x,
+        y: cursor.y - 10
+      };
+      parts.push(head);
+      lastWasPenetration = false; // done
     }
 
     function rebuildSVG() {
       [...svg.querySelectorAll('.route-part')].forEach(el => el.remove());
 
       parts.forEach(p => {
-        if (p.type === 'straight' || p.type === 'vertical-rise') {
-          // draw thick tube
+        if (p.type === 'straight') {
           const line = document.createElementNS('http://www.w3.org/2000/svg', 'line');
           line.setAttribute('x1', p.x1);
           line.setAttribute('y1', p.y1);
@@ -291,8 +279,7 @@
           line.setAttribute('class', 'route-part');
           svg.appendChild(line);
         } else if (p.type === 'elbow') {
-          // draw a small square/plate to show elbow
-          const s = 12;
+          const s = 14;
           const rect = document.createElementNS('http://www.w3.org/2000/svg', 'rect');
           rect.setAttribute('x', p.x - s/2);
           rect.setAttribute('y', p.y - s/2);
@@ -302,48 +289,34 @@
           rect.setAttribute('rx', 3);
           rect.setAttribute('class', 'route-part');
           svg.appendChild(rect);
-        } else if (p.type === 'terminal-horizontal') {
+        } else if (p.type === 'penetration') {
+          const circ = document.createElementNS('http://www.w3.org/2000/svg', 'circle');
+          circ.setAttribute('cx', p.x);
+          circ.setAttribute('cy', p.y);
+          circ.setAttribute('r', 6);
+          circ.setAttribute('fill', p.variant.includes('wall') ? '#f97316' : '#facc15');
+          circ.setAttribute('class', 'route-part');
+          svg.appendChild(circ);
+        } else if (p.type === 'plume-kit') {
+          const rect = document.createElementNS('http://www.w3.org/2000/svg', 'rect');
+          rect.setAttribute('x', p.x);
+          rect.setAttribute('y', p.y - 5);
+          rect.setAttribute('width', 18);
+          rect.setAttribute('height', 10);
+          rect.setAttribute('fill', '#6366f1');
+          rect.setAttribute('rx', 2);
+          rect.setAttribute('class', 'route-part');
+          svg.appendChild(rect);
+        } else if (p.type === 'terminal') {
           const rect = document.createElementNS('http://www.w3.org/2000/svg', 'rect');
           rect.setAttribute('x', p.x);
           rect.setAttribute('y', p.y - 6);
-          rect.setAttribute('width', 18);
+          rect.setAttribute('width', 16);
           rect.setAttribute('height', 12);
           rect.setAttribute('fill', '#22c55e');
           rect.setAttribute('rx', 2);
           rect.setAttribute('class', 'route-part');
           svg.appendChild(rect);
-        } else if (p.type === 'plume-kit') {
-          const line = document.createElementNS('http://www.w3.org/2000/svg', 'line');
-          line.setAttribute('x1', p.x1);
-          line.setAttribute('y1', p.y1);
-          line.setAttribute('x2', p.x2);
-          line.setAttribute('y2', p.y2);
-          line.setAttribute('stroke', '#6366f1');
-          line.setAttribute('stroke-width', '6');
-          line.setAttribute('stroke-linecap', 'round');
-          line.setAttribute('class', 'route-part');
-          svg.appendChild(line);
-
-          const head = document.createElementNS('http://www.w3.org/2000/svg', 'rect');
-          head.setAttribute('x', p.x2);
-          head.setAttribute('y', p.y2 - 5);
-          head.setAttribute('width', 18);
-          head.setAttribute('height', 10);
-          head.setAttribute('fill', '#6366f1');
-          head.setAttribute('class', 'route-part');
-          svg.appendChild(head);
-        } else if (p.type === 'roof-terminal') {
-          const poly = document.createElementNS('http://www.w3.org/2000/svg', 'polygon');
-          if (p.variant === 'pitched') {
-            const d = `${p.x},${p.y} ${p.x+16},${p.y} ${p.x+8},${p.y-10}`;
-            poly.setAttribute('points', d);
-          } else {
-            const d = `${p.x},${p.y} ${p.x+16},${p.y} ${p.x+16},${p.y-6} ${p.x},${p.y-6}`;
-            poly.setAttribute('points', d);
-          }
-          poly.setAttribute('fill', '#f97316');
-          poly.setAttribute('class', 'route-part');
-          svg.appendChild(poly);
         }
       });
 
@@ -355,16 +328,14 @@
       let bends = 0;
       parts.forEach(p => {
         if (p.type === 'straight') {
-          eq += (p.mm * EQ.straightPerMm);
-        } else if (p.type === 'vertical-rise') {
-          eq += (p.mm * EQ.verticalRisePerMm);
+          eq += p.mm * EQ.straightPerMm;
         } else if (p.type === 'elbow') {
           bends++;
           eq += (Math.abs(p.angle) === 90 ? EQ.bend90 : EQ.bend45);
+        } else if (p.type === 'penetration') {
+          eq += EQ.penetration;
         } else if (p.type === 'plume-kit') {
           eq += EQ.plumeKit;
-        } else if (p.type === 'roof-terminal') {
-          eq += EQ.roofTerminal;
         }
       });
       eqSpan.textContent = `Eq: ${eq.toFixed(1)}m`;
@@ -385,30 +356,43 @@
       }, null, 2);
     }
 
-    // part buttons
+    // manual buttons
     document.querySelectorAll('.btn[data-action]').forEach(btn => {
       btn.addEventListener('click', () => {
         const act = btn.dataset.action;
         if (act === 'straight') addStraight(Number(btn.dataset.length));
-        else if (act === 'elbow') addElbow(Number(btn.dataset.angle));
-        else if (act === 'terminal-horiz') addHorizontalTerminal();
+        else if (act === 'elbow') addElbowTo((cursor.angle + Number(btn.dataset.angle)) % 360);
+        else if (act === 'penetrate-wall') addPenetration('wall');
+        else if (act === 'penetrate-roof-pitched') addPenetration('roof-pitched');
+        else if (act === 'penetrate-roof-flat') addPenetration('roof-flat');
+        else if (act === 'terminate') addHorizontalTerminal();
         else if (act === 'plume-kit') addPlumeKit();
-        else if (act === 'vertical-rise') addVerticalRise(1000);
-        else if (act === 'roof-pitched') addRoofTerminal('pitched');
-        else if (act === 'roof-flat') addRoofTerminal('flat');
         rebuildSVG();
       });
     });
 
-    // vector controls
+    // vector smart add: if direction != current → elbow, else → straight
     document.querySelectorAll('.vector-grid button').forEach(btn => {
       btn.addEventListener('click', () => {
         const dir = btn.dataset.dir;
         const rot = btn.dataset.rotate;
         if (dir !== undefined) {
-          cursor.angle = Number(dir); // set absolute heading
+          const target = Number(dir);
+          const current = cursor.angle;
+          // normalised equality check
+          const diff = Math.abs((((target - current) % 360) + 360) % 360);
+          if (diff > 1) {
+            // add elbow to that direction
+            addElbowTo(target);
+          } else {
+            // already in that direction, add straight
+            addStraight(1000);
+          }
+          rebuildSVG();
         } else if (rot === 'cw') {
-          cursor.angle = (cursor.angle + 90) % 360;
+          const newDir = (cursor.angle + 90) % 360;
+          addElbowTo(newDir);
+          rebuildSVG();
         }
       });
     });
@@ -416,9 +400,11 @@
     document.getElementById('reset').addEventListener('click', () => {
       parts = [];
       cursor = { x: 110, y: 210, angle: -90 };
+      lastWasPenetration = false;
       rebuildSVG();
     });
 
+    // initial draw
     rebuildSVG();
   </script>
 </body>
