Add interactive condensate options page

--- a/app.html
+++ b/app.html
@@ -401,7 +401,7 @@ function renderCondensate(){
     <p class="help">Use visuals to help the customer understand where the condensate will discharge.</p>
     <div class="figureGrid">
       <figure class="figureCard">
-        <img src="assets/Internal-condensate.PNG" alt="Internal condensate trap connected to sink waste">
+        <img src="assets/internal-condensate.png" alt="Internal condensate trap connected to sink waste">
         <figcaption>Internal waste tie-in keeps the pipe frost-free. Confirm visible fall and permanent trap.</figcaption>
       </figure>
     </div>`;
